# pydevice42

./: .envrc.sample  .gitignore  HACKING.md  README.md  hacking.ipy  pyproject.toml  setup.cfg  setup.py  test.txt
.github/workflows/: ci.yaml  release.yaml
Infoblox_Query/: .gitignore  infoblox_setup.cfg.sample  main.py  pyproject.toml
devel/: ci-local.sh  ci.sh  init.ipy  ipython.sh
pydevice42/: __init__.py  __main__.py  basicrestclient.py  client.py  d42client.py  exceptions.py  toolbox.py  types.py  types.pyi
