[tool.poetry]
name = "pydevice42"
version = "0.1.0"
description = "Python library to interact with Device42"
authors = ["Joaquim Esteves <joaquimbve@hotmail.com>", "Philipp Schmitt <philipp.schmitt@post.lu>"]
license = "GPL-3.0-only"
homepage = "https://github.com/post-luxembourg/pydevice42"
readme = "README.md"
include = ["pydevice42/py.typed"]
classifiers = [
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
curlify = "^2.2.1"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
mypy-extensions = "^0.4.3"
autopep8 = "^1.5.4"
flake8-mypy = "^17.8.0"
isort = "^5.6.4"

[tool.black]
line-length = 80

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
