[tool.poetry]
name = "pydevice42"
version = "0.2.0"
description = "Python library to interact with Device42"
authors = ["Joaquim Esteves <joaquimbve@hotmail.com>", "Philipp Schmitt <philipp.schmitt@post.lu>"]
license = "GPL-3.0-only"
homepage = "https://github.com/post-luxembourg/pydevice42"
readme = "README.md"
include = ["pydevice42/py.typed"]
classifiers = [
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
curlify = "^2.2.1"
flakehell = "^0.7.1"
ipython = "^7.19.0"
isort = "^5.6.4"
mypy = "^0.790"
mypy-extensions = "^0.4.3"

[tool.black]
line-length = 80

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80

[tool.flakehell]
max_line_length = 80
show_source = true

[tool.flakehell.plugins]
mccabe = ["+*"]
pycodestyle = ["+*"]
# https://black.readthedocs.io/en/stable/compatible_configs.html#flake8
pyflakes = ["+*", "-E203", "-E501", "-W503"]
# https://black.readthedocs.io/en/stable/compatible_configs.html#pylint
pylint = ["+*", "-C0330", "-CC0326"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
