[tool.poetry]
name = "InfobloxQuery"
version = "0.1.0"
description = "Enhancements to the Sync scripts for Device42"
authors = ["Joaquim Esteves <joaquimbve@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
netaddr = "^0.8.0"
# Doesn't work properly for me :(
# infoblox-client = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
mypy-extensions = "^0.4.3"
autopep8 = "^1.5.4"
flake8-mypy = "^17.8.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
